--- a/public/css/iconstyle.css
+++ b/public/css/iconstyle.css
@@ -1,254 +1,262 @@
 @font-face {
-    font-family: 'ERUDITE';
-    src:  url('fonts/ERUDITE.eot?m51v0t');
-    src:  url('fonts/ERUDITE.eot?m51v0t#iefix') format('embedded-opentype'),
-      url('fonts/ERUDITE.ttf?m51v0t') format('truetype'),
-      url('fonts/ERUDITE.woff?m51v0t') format('woff'),
-      url('fonts/ERUDITE.svg?m51v0t#ERUDITE') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-  }
-  
-  [class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'ERUDITE' !important;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-  
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .icon-toggle-right-fill:before {
-    content: "\e91d";
-  }
-  .icon-user-check:before {
-    content: "\e909";
-  }
-  .icon-location-fill:before {
-    content: "\e912";
-  }
-  .icon-wechat-fill:before {
-    content: "\e929";
-  }
-  .icon-trending-up-circle:before {
-    content: "\e927";
-  }
-  .icon-award-circle:before {
-    content: "\e91e";
-  }
-  .icon-award:before {
-    content: "\e915";
-  }
-  .icon-briefcase:before {
-    content: "\e93a";
-  }
-  .icon-check:before {
-    content: "\e901";
-  }
-  .icon-envelope:before {
-    content: "\e92e";
-  }
-  .icon-location:before {
-    content: "\e928";
-  }
-  .icon-pocket:before {
-    content: "\e93b";
-  }
-  .icon-sliders:before {
-    content: "\e93d";
-  }
-  .icon-smile:before {
-    content: "\e93f";
-  }
-  .icon-target:before {
-    content: "\e916";
-  }
-  .icon-toggle-right:before {
-    content: "\e940";
-  }
-  .icon-trending-up:before {
-    content: "\e919";
-  }
-  .icon-users:before {
-    content: "\e941";
-  }
-  .icon-sphere:before {
-    content: "\e95a";
-  }
-  .icon-star-half:before {
-    content: "\e938";
-  }
-  .icon-planet-earth:before {
-    content: "\e914";
-  }
-  .icon-brain:before {
-    content: "\e95c";
-  }
-  .icon-heart-beat:before {
-    content: "\e95d";
-  }
-  .icon-teddy-bear:before {
-    content: "\e963";
-  }
-  .icon-birthday-cake:before {
-    content: "\e939";
-  }
-  .icon-hand-shake:before {
-    content: "\e93c";
-  }
-  .icon-play:before {
-    content: "\e93e";
-  }
-  .icon-man:before {
-    content: "\e944";
-  }
-  .icon-mommy:before {
-    content: "\e945";
-  }
-  .icon-signiture:before {
-    content: "\e949";
-  }
-  .icon-search:before {
-    content: "\e955";
-  }
-  .icon-arrow-right:before {
-    content: "\e900";
-  }
-  .icon-black-envelope:before {
-    content: "\e902";
-  }
-  .icon-calendar:before {
-    content: "\e903";
-  }
-  .icon-calendar2:before {
-    content: "\e904";
-  }
-  .icon-cart:before {
-    content: "\e905";
-  }
-  .icon-check-mark:before {
-    content: "\e906";
-  }
-  .icon-clock:before {
-    content: "\e907";
-  }
-  .icon-clock2:before {
-    content: "\e908";
-  }
-  .icon-email2:before {
-    content: "\e90a";
-  }
-  .icon-emergency-call:before {
-    content: "\e90b";
-  }
-  .icon-error:before {
-    content: "\e90c";
-  }
-  .icon-facebook-logo:before {
-    content: "\e90d";
-  }
-  .icon-facebook-logo-circle:before {
-    content: "\e90e";
-  }
-  .icon-star:before {
-    content: "\e90f";
-  }
-  .icon-google-plus-circle:before {
-    content: "\e910";
-  }
-  .icon-google-plus1:before {
-    content: "\e911";
-    color: #f34a38;
-  }
-  .icon-clock3:before {
-    content: "\e913";
-  }
-  .icon-instagram:before {
-    content: "\e917";
-  }
-  .icon-link-symbol:before {
-    content: "\e918";
-  }
-  .icon-menu:before {
-    content: "\e91a";
-  }
-  .icon-paintbrush:before {
-    content: "\e91b";
-  }
-  .icon-pencil-writing:before {
-    content: "\e91c";
-  }
-  .icon-price-tag:before {
-    content: "\e91f";
-  }
-  .icon-reply-black:before {
-    content: "\e920";
-  }
-  .icon-right-arrow:before {
-    content: "\e921";
-  }
-  .icon-left-arrow:before {
-    content: "\e92f";
-  }
-  .icon-left:before {
-    content: "\e922";
-  }
-  .icon-right:before {
-    content: "\e930";
-  }
-  .icon-top:before {
-    content: "\e931";
-  }
-  .icon-bottom:before {
-    content: "\e932";
-  }
-  .icon-smartphone:before {
-    content: "\e923";
-  }
-  .icon-team:before {
-    content: "\e924";
-  }
-  .icon-telephone:before {
-    content: "\e925";
-  }
-  .icon-twitter-logo-circle:before {
-    content: "\e92a";
-  }
-  .icon-twitter-logo:before {
-    content: "\e92b";
-  }
-  .icon-up-arrow:before {
-    content: "\e92c";
-  }
-  .icon-user:before {
-    content: "\e92d";
-  }
-  .icon-close:before {
-    content: "\e937";
-  }
-  .icon-instagram-circle:before {
-    content: "\e933";
-  }
-  .icon-innovation:before {
-    content: "\e956";
-  }
-  .icon-compassion:before {
-    content: "\e958";
-  }
-  .icon-pinterest-logo:before {
-    content: "\e934";
-  }
-  .icon-pinterest-circle:before {
-    content: "\e935";
-  }
-  .icon-google-logo:before {
-    content: "\e936";
-  }
-  
+  font-family: 'ERUDITE';
+  src:  url('fonts/ERUDITE.eot?l4w1j2');
+  src:  url('fonts/ERUDITE.eot?l4w1j2#iefix') format('embedded-opentype'),
+    url('fonts/ERUDITE.ttf?l4w1j2') format('truetype'),
+    url('fonts/ERUDITE.woff?l4w1j2') format('woff'),
+    url('fonts/ERUDITE.svg?l4w1j2#ERUDITE') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'ERUDITE' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-youtube-logo:before {
+  content: "\e943";
+}
+.icon-planet-earth:before {
+  content: "\e914";
+}
+.icon-brain:before {
+  content: "\e95c";
+}
+.icon-heart-beat:before {
+  content: "\e95d";
+}
+.icon-teddy-bear:before {
+  content: "\e963";
+}
+.icon-birthday-cake:before {
+  content: "\e939";
+}
+.icon-hand-shake:before {
+  content: "\e93c";
+}
+.icon-play:before {
+  content: "\e93e";
+}
+.icon-man:before {
+  content: "\e944";
+}
+.icon-mommy:before {
+  content: "\e945";
+}
+.icon-signiture:before {
+  content: "\e949";
+}
+.icon-search:before {
+  content: "\e955";
+}
+.icon-arrow-right:before {
+  content: "\e900";
+}
+.icon-black-envelope:before {
+  content: "\e902";
+}
+.icon-calendar:before {
+  content: "\e903";
+}
+.icon-calendar2:before {
+  content: "\e904";
+}
+.icon-cart:before {
+  content: "\e905";
+}
+.icon-check-mark:before {
+  content: "\e906";
+}
+.icon-clock:before {
+  content: "\e907";
+}
+.icon-clock2:before {
+  content: "\e908";
+}
+.icon-email2:before {
+  content: "\e90a";
+}
+.icon-emergency-call:before {
+  content: "\e90b";
+}
+.icon-error:before {
+  content: "\e90c";
+}
+.icon-facebook-logo:before {
+  content: "\e90d";
+}
+.icon-facebook-logo-circle:before {
+  content: "\e90e";
+}
+.icon-star:before {
+  content: "\e90f";
+}
+.icon-google-plus-circle:before {
+  content: "\e910";
+}
+.icon-google-plus1:before {
+  content: "\e911";
+  color: #f34a38;
+}
+.icon-clock3:before {
+  content: "\e913";
+}
+.icon-instagram:before {
+  content: "\e917";
+}
+.icon-link-symbol:before {
+  content: "\e918";
+}
+.icon-menu:before {
+  content: "\e91a";
+}
+.icon-paintbrush:before {
+  content: "\e91b";
+}
+.icon-pencil-writing:before {
+  content: "\e91c";
+}
+.icon-price-tag:before {
+  content: "\e91f";
+}
+.icon-reply-black:before {
+  content: "\e920";
+}
+.icon-right-arrow:before {
+  content: "\e921";
+}
+.icon-left-arrow:before {
+  content: "\e92f";
+}
+.icon-left:before {
+  content: "\e922";
+}
+.icon-right:before {
+  content: "\e930";
+}
+.icon-top:before {
+  content: "\e931";
+}
+.icon-bottom:before {
+  content: "\e932";
+}
+.icon-smartphone:before {
+  content: "\e923";
+}
+.icon-team:before {
+  content: "\e924";
+}
+.icon-telephone:before {
+  content: "\e925";
+}
+.icon-twitter-logo-circle:before {
+  content: "\e92a";
+}
+.icon-twitter-logo:before {
+  content: "\e92b";
+}
+.icon-up-arrow:before {
+  content: "\e92c";
+}
+.icon-user:before {
+  content: "\e92d";
+}
+.icon-linkedin-logo:before {
+  content: "\e926";
+}
+.icon-linkedin-box:before {
+  content: "\e942";
+}
+.icon-sphere:before {
+  content: "\e95a";
+}
+.icon-star-half:before {
+  content: "\e938";
+}
+.icon-toggle-right-fill:before {
+  content: "\e91d";
+}
+.icon-user-check:before {
+  content: "\e909";
+}
+.icon-location-fill:before {
+  content: "\e912";
+}
+.icon-wechat-fill:before {
+  content: "\e929";
+}
+.icon-trending-up-circle:before {
+  content: "\e927";
+}
+.icon-award-circle:before {
+  content: "\e91e";
+}
+.icon-award:before {
+  content: "\e915";
+}
+.icon-briefcase:before {
+  content: "\e93a";
+}
+.icon-check:before {
+  content: "\e901";
+}
+.icon-envelope:before {
+  content: "\e92e";
+}
+.icon-location:before {
+  content: "\e928";
+}
+.icon-pocket:before {
+  content: "\e93b";
+}
+.icon-sliders:before {
+  content: "\e93d";
+}
+.icon-smile:before {
+  content: "\e93f";
+}
+.icon-target:before {
+  content: "\e916";
+}
+.icon-toggle-right:before {
+  content: "\e940";
+}
+.icon-trending-up:before {
+  content: "\e919";
+}
+.icon-users:before {
+  content: "\e941";
+}
+.icon-close:before {
+  content: "\e937";
+}
+.icon-instagram-circle:before {
+  content: "\e933";
+}
+.icon-innovation:before {
+  content: "\e956";
+}
+.icon-compassion:before {
+  content: "\e958";
+}
+.icon-pinterest-logo:before {
+  content: "\e934";
+}
+.icon-pinterest-circle:before {
+  content: "\e935";
+}
+.icon-google-logo:before {
+  content: "\e936";
+}
